aligning sponsors issue

--- a/src/css/SponsorsContent.module.css
+++ b/src/css/SponsorsContent.module.css
@@ -21,13 +21,21 @@
 }
 
 .sponsors {
-  flex: 0 25%;
+  border-top: 1px solid var(--color-lines);
+  flex-grow: 1;
+  width: 33%;
   padding: 10px 0;
 }
 
 .innerContainer {
   width: 94%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
+  align-items: center;
+}
+
+.expand {
+  border-top: 1px solid var(--color-lines);
+  flex-grow: 10;
+  padding: 10px 0;
 }
